--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	DHT sensor library@^1.4.6
 	home-assistant-integration@^2.1.0
 	PubSubClient@^2.8
+	adafruit/Adafruit Unified Sensor@^1.1.15
