Add configuration template for WiFi and MQTT settings
- Created a new config.template.h file to allow users to define their WiFi and MQTT broker credentials.
- Added placeholders for WiFi SSID, password, MQTT broker address, port, username, and password.
- Included a note to copy the template to src/config.h and to gitignore the actual config.h file.
- Added an empty secrets.h file for future use.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+
+# Local config containing secrets - keep out of git
+src/config.h
+config.h
+.env
+*.env
